    - [ole] wajig --verbose install <package>
    - [new] wajig install --verbose <package>
  * FILEINSTALL: removed in favor of INSTALL option, -f|--fileinput:
    - [ole] wajig FILEINSTALL <filename>
    - [new] wajig INSTALL --fileinput <filename(s)> [package(s)]
    Note that with this new command, one can specify multiple files and
    packages on the command line.
  * FILEREMOVE: same as FILEINSTALL
  * REMOVE, PURGE: add --noauth option, to avoid cases where a package would
    be downloaded when there's an unauthenticated version available; this
    happens in a case where removing/purging a package leaves a void
    where APT want to be smart/convenient, and install a replacement.
  * Improve usability by limiting verbosity to either True or False.
  * DOWNLOAD: can't download packages listed inside a file anymore; whoever
    used that anyways?
  * INSTALL: remove ability to install packages listed in a file.
  * Rename LISTRECOMMENDED --> RECOMMENDED
  * Remove the sanitation of wajig COMMANS, e.g. where 'LISTcommands',
    'list-commands', and 'li-st_COMMA-nds' would be translated to
    'listcommands'; it's too much magic (and too much work to get it to work
     with argparse)
  * LISTCACHE: remove ability to filter output; user can always run grep
    themselves
  * LISTNAMES: same as LISTCACHE
  * LISTPACKAGES: same as LISTCACHE
  * LISTSTATUS: same as LISTCACHE
  * NEW: 'wajig new --install' replaces the less elegant 'wajig new install'
  * NEWUPGRADES: 'wajig NEWUPGRADES --install' replaces the less elegant
    'wajig NEWUPGRADES install'
  * RELOAD: if this fails, try FORCE-RELOAD

  DOC CHANGES:
  * DOWNLOAD: improve description. (Closes: #627173)
  * DESCRIBE: Last character in short description missing - LP: #923041
  * DEPENDENTS: improve output

  REMOVED
  * The "--pager" option is really excess, considering that user can simply do
    "wajig COMMAND | pager" by herself